# agent-observability-poc

./: .gitignore  main.code-workspace
.github/workflows/: create.yaml
app/: Dockerfile  pyproject.toml
app/src/app/: main.py
infra/: app.py  pyproject.toml
infra/bootstrap/: github.yaml
infra/scripts/: bootstrap.sh
